--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>
-            Sivun otsikko
-        </title>
-        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Yksinkertainen HTML sivuni</title>
     </head>
-    <body>  
-    <div class="header-example">
-            Tähän jotakin tekstiä.
-    </div>
-    <div class="color-example">
-        <p> Kirjoitan tähän jotakin.
-</p>
-    </div>
-     <div class="list-example">
-     <ul>
-        <li>Asia yksi</li>
-        <li>Asia kaksi</li>
-        <li>Asia kolme</li>
-    </ul>
-     </div> 
-<div class="text-example">
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sem nisl, ornare a pharetra id, facilisis gravida mauris. Vivamus ultricies ante ut dui rutrum, a semper urna cursus. Etiam gravida eget justo non euismod. Vestibulum consectetur ligula sed malesuada congue. Vestibulum lobortis euismod ante, nec semper neque ullamcorper eget. 
-        Donec eget ipsum eu dolor dictum commodo vel vestibulum nibh. Donec consequat egestas mi, vel efficitur odio blandit nec. Nullam porttitor orci sed ligula placerat, quis facilisis erat rhoncus. Nulla vehicula sed nulla quis malesuada. Aenean posuere ut quam et vulputate. Donec dignissim, tellus non luctus venenatis, sem nunc pellentesque mi, eget sodales velit urna vitae risus. Vivamus tempor magna leo, id placerat metus luctus quis. 
-        </p>
-</div>
-<div class="div-example">
-    <div>
-        Tähän vielä lisää tekstiä.
-        </div>
-</div>
-
-</body>
+    <body> 
+        <header>Sopiva otsikko</header>
+        <nav> 
+            <ul>
+                <li><a href="#main-content">Pääsisältö</a></li>
+                <li><a href="#ol">Lista</a></li>
+                <li><a href="#footer">Alatunniste</a></li>
+            </ul>
+        </nav>
+        <main>Tämä on HTML sivun sisältöä. Tähän voi kirjoittaa tekstiä.</main>
+        <ol>
+            <li>Asia yksi</li>
+            <li>Asia kaksi</li>
+            <li>Asia kolme</li>
+        </ol>
+        <footer>Soile Kakko 2025</footer>
+    </body>
 </html>
