--- a/testi/index.html
+++ b/testi/index.html
@@ -5,23 +5,25 @@
  <meta charset="utf-8">
    <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Sivun otsikko</title> 
+<title>Sivuston nimi</title> 
 <link rel="icon" type="image/x-icon" href="kissalogo.png">
 </head>
 <body>
 
 <div class="nav" id="mynav">
           <a href="index.html"><img src="kissalogo.png" alt="logo" style="width:50px;height:50px;"></a>
-  <a href="index.html">INDEX</a>
-  <a href="second.html">SECOND</a>
-  <a href="third.html">THIRD</a>
-  <a href="fourth.html">FORTH</a>
+  <a href="index.html">Etusivu</a>
+  <a href="second.html">Kissaeläimiä</a>
+  <a href="third.html">Lintuja</a>
+  <a href="fourth.html">Apinoita</a>
   <a href="fifth.html">FIFTH</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
 </div>
+<h1>Otsikko</h1>
 
+<p>Tähän tekstiä sivustosta</p>
 
 <!-- Slideshow container -->
 <div class="slideshow-container">
