--- a/testi/fourth.html
+++ b/testi/fourth.html
@@ -29,7 +29,7 @@
 
 
 
-<div id="section">
+<div class="section">
   <aside>
          <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
   </aside>
@@ -40,7 +40,27 @@
   </article>
 </div>
 
+<div class="section">
 
+  
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+    <aside>
+         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+  </aside>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+  </aside>
+  
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
 
 
