--- a/testi/second.html
+++ b/testi/second.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,13 +22,113 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-<h1>Otsikko</h1>
+<h2>Otsikko</h2>
 
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
 
 
 
+<div class="section">
+  <aside>
+         <img src="IMG_0731.png" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+
+<div class="section">
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+    <aside>
+         <img src="IMG_2837.jpg" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_2922.jpg" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_4936.jpg" alt="leijona" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_4949.jpg" alt="leijona" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_7216.jpg" alt="lumileobardi" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_7254.jpg" alt="lumileobardi" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_7980.jpg" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8042.jpg" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_9342.png" alt="leijonat" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8049.png" alt="kissa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
 
 
@@ -54,3 +155,9 @@ function myFunction() {
 
 </body>
 </html>
+
+
+
+
+
+
