--- a/testi/third.html
+++ b/testi/third.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,37 +27,117 @@
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
 
-<div>
+
+
+<div class="section">
   <aside>
-    <img src="IMG_6898.png" alt="pöllö" style="width: 300px;height: auto;">
-</aside>
-  
+         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+  </aside>
   <article>
-    <h2>London</h2>
+    <h3>London</h3>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </article>
 </div>
 
-<div>
-     <article>
-    <h2>London</h2>
+<div class="section">
+  <article>
+    <h3>London</h3>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </article>
+    <aside>
+         <img src="IMG_6981.png" alt="pöllö" style="width: 100%;height: auto;">
+  </aside>
+</div>
+<div class="section">
   <aside>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
-</aside>
-  
- 
+         <img src="IMG_7730.png" alt="sorsa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
 </div>
-
-
-
-
-
+<div class="section">
+  <aside>
+         <img src="IMG_8003.png" alt="sorsia" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8908.jpg" alt="sorsa" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8407.png" alt="lintuja" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8898.jpg" alt="lokki" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_8943.jpg" alt="lintu" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_9517.png" alt="lintu" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_6467.jpg" alt="lintu" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_4977.jpg" alt="lintu" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+<div class="section">
+  <aside>
+         <img src="IMG_9553.jpg" alt="pingviini" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
 
 <footer>
@@ -82,6 +163,7 @@ function myFunction() {
 
 </body>
 </html>
+
 
 
 
