--- a/testi/fourth.html
+++ b/testi/fourth.html
@@ -31,9 +31,8 @@
 
 <div class="section">
   <aside>
-         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+         <img src="IMG_9682.png" alt="apina" style="width: 100%;height: auto;">
   </aside>
-  
   <article>
     <h3>London</h3>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
@@ -41,29 +40,74 @@
 </div>
 
 <div class="section">
-
-  
   <article>
     <h3>London</h3>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </article>
     <aside>
-         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+         <img src="IMG_9628.png" alt="apina" style="width: 100%;height: auto;">
   </aside>
 </div>
+
 <div class="section">
   <aside>
-         <img src="IMG_6898.png" alt="pöllö" style="width: 100%;height: auto;">
+         <img src="IMG_9400.png" alt="apina" style="width: 100%;height: auto;">
   </aside>
-  
   <article>
     <h3>London</h3>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </article>
 </div>
 
+<div class="section">
+  <aside>
+         <img src="IMG_6598.jpg" alt="apina" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
+<div class="section">
+  <aside>
+         <img src="IMG_6584.jpg" alt="apina" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
+<div class="section">
+  <aside>
+         <img src="IMG_5188.jpg" alt="apina" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+
+<div class="section">
+  <aside>
+         <img src="IMG_5176.jpg" alt="apina" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
+
+<div class="section">
+  <aside>
+         <img src="IMG_9604.png" alt="apina" style="width: 100%;height: auto;">
+  </aside>
+  <article>
+    <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  </article>
+</div>
 
 
 <footer>
