--- a/Eläinsafari/index.html
+++ b/Eläinsafari/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta charset="utf-8">
@@ -39,7 +39,7 @@
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 5</div>
-    <a href="third.html"><img src="IMG_8407.png" alt="lintuja" style="width:100%;"></a>
+    <a href="third.html"><img src="IMG_8898.jpg" alt="lokki" style="width:100%;"></a>
     <div class="text">Caption Two</div>
   </div>
 
