--- a/Eläinsafari/fifth.html
+++ b/Eläinsafari/fifth.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-<h2>Otsikko</h2>
+<h2>Sorkkaeläimet</h2>
 
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
@@ -119,7 +119,6 @@
 </div>
 
 <div class="section">
-    </article>
     <aside>
         <img src="IMG_5050.jpg" alt="pahkasika" style="width: 100%;height: auto;">
   </aside>
@@ -127,6 +126,7 @@
     <h3>Pahkasika</h3>
     <p>Pahkasiat ovat sikojen heimoon kuuluvia sorkkaeläimiä. Niillä on kaksi paria ulkonevia torahampaita. Pahka-nimitys on lähtöisin niiden sarvennysistä. Pahkasiat elävät laajoilla alueilla Saharan eteläpuolisessa Afrikassa. Ne viihtyvät ruohotasangoilla ja puuttomilla tai harvapuisilla savanneilla.</p>
     <a href="https://animalia.bio/fi/common-warthog" target="_blank">Lähde</a>
+     </article>
 </div>
 
 
