--- a/Eläinsafari/index.html
+++ b/Eläinsafari/index.html
@@ -25,7 +25,7 @@
 <h2>Eläinsafari</h2>
 
 <p>Tervetuloa Eläinsafarille!</p>
-<p>Tällä sivustolla esitellään erilaisia eläimiä.</p>
+<p>Tällä sivustolla esitellään erilaisia eläimiä kuvien ja lyhyiden esittelytekstien avulla.</p>
 
 <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -33,32 +33,32 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 5</div>
-    <a href="second.html"><img src="IMG_0731.png" alt="kissa" style="width:100%;"></a>
-    <div class="text">Caption Text</div>
+    <a href="second.html"><img src="IMG_2922.jpg" alt="kissa" style="width:100%;"></a>
+    <div class="text">Kissa</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 5</div>
     <a href="third.html"><img src="IMG_8898.jpg" alt="lokki" style="width:100%;"></a>
-    <div class="text">Caption Two</div>
+    <div class="text">Lokki</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 5</div>
     <a href="fourth.html"><img src="IMG_9682.png" alt="apina" style="width:100%;"></a>
-    <div class="text">Caption Three</div>
+    <div class="text">Vaippapaviaani</div>
   </div>
 
     <div class="mySlides fade">
     <div class="numbertext">4 / 5</div>
     <a href="fifth.html"><img src="IMG_4774.jpg" alt="lehmä" style="width:100%;"></a>
-    <div class="text">Caption Four</div>
+    <div class="text">Nauta</div>
   </div>
 
     <div class="mySlides fade">
     <div class="numbertext">5 / 5</div>
     <a href="sixth.html"><img src="IMG_4738.jpg" alt="koira" style="width:100%;"></a>
-    <div class="text">Caption Five</div>
+    <div class="text">Koira</div>
   </div>
   
   <!-- Next and previous buttons -->
