--- a/Eläinsafari/second.html
+++ b/Eläinsafari/second.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta charset="utf-8">
@@ -23,45 +23,40 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-<h2>Otsikko</h2>
+<h2>Kissaeläimet</h2>
 
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
 
 
 
-<div class="section">
-  <aside>
-         <img src="IMG_0731.png" alt="kissa" style="width: 100%;height: auto;">
-  </aside>
-  <article>
-    <h3>London</h3>
-    <p>teksti</p>
-  </article>
-</div>
+
 
 <div class="section">
   <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Kissa</h3>
+    <p>Kissoja voidaan kutsua myös kotikissoiksi tai kesykissoiksi. Kesyyntymisestä huolimatta kissat ovat säilyttäneet itsenäisen luonteensa. </p>
+    <a href="https://www.britannica.com/animal/cat" target="_blank">Lähde</a>
   </article>
     <aside>
-         <img src="IMG_2837.jpg" alt="kissa" style="width: 100%;height: auto;">
+         <img src="IMG_2922.jpg" alt="kissa" style="width: 100%;height: auto;">
   </aside>
 </div>
 <div class="section">
   <aside>
-         <img src="IMG_2922.jpg" alt="kissa" style="width: 100%;height: auto;">
+         <img src="IMG_2837.jpg" alt="kissa" style="width: 100%;height: auto;">
   </aside>
   <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Kissa</h3>
+    <p>Kissarotuja on paljon, mutta monet roduista ovat hyvin samankaltaisia, joten kissoja usein erotellaankin niiden turkkien värien perusteella. Eri rotuiset kissat voidaan yleensä määritellä olevan ruumiinrakenteeltaan joko tanakkoja, solakoita tai keskinkertaisia. </p>
+    <a href="https://www.britannica.com/animal/cat" target="_blank">Lähde</a>
   </article>
 </div>
 <div class="section">
    <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Kissa</h3>
+    <p>Kissat kävelevät varpaillaan, ja siksi niiden askeleet ovat niin hiljaisia. Kissat ovat ketteriä, koska lihakset yhdistävät niiden selkärangan nikamat. Kissojen olkanivelien rakenne mahdollistaa eturaajojen laajan liikeradan, jonka ansiosta kissat voivat tehdä nopeita käännöksiä. </p>
+    <a href="https://www.britannica.com/animal/cat" target="_blank">Lähde</a>
   </article>
   <aside>
           <img src="IMG_8049.png" alt="kissa" style="width: 100%;height: auto;">
@@ -72,14 +67,16 @@
            <img src="IMG_8042.jpg" alt="kissa" style="width: 100%;height: auto;">
   </aside>
   <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Kissa</h3>
+    <p>Kissat kommunikoivat erilaisilla äänillä toisten kissojen ja ihmisten kanssa. Ne naukuvat, kehräävät, sähisevät, murisevat ja ulvahtelevat.</p>
+    <a href="https://www.britannica.com/animal/cat" target="_blank">Lähde</a>
   </article>
 </div>
 <div class="section">
   <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Kissa</h3>
+       <p>Kissat kommunikoivat kehon eleillä. Ne esimerkiksi kaartavat selkänsä, nostavat turkkinsa pystyyn, kyyristyvät tai leipovat. Häntäänsä kissat saattavat heiluttaa puolelta toiselle, piilottaa sen takajalkojensa väliin tai heiluttaa vain hännän päätä. </p>
+    <a href="https://www.britannica.com/animal/cat" target="_blank">Lähde</a>
   </article>
   <aside>
          <img src="IMG_7980.jpg" alt="kissa" style="width: 100%;height: auto;">
