--- a/Eläinsafari/sixth.html
+++ b/Eläinsafari/sixth.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-<h2>Otsikko</h2>
+<h2>Muut eläimet</h2>
 
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
