--- a/Eläinsafari/third.html
+++ b/Eläinsafari/third.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta charset="utf-8">
@@ -23,20 +23,21 @@
     <i class="fa fa-bars"></i>
   </a>
 </div>
-<h2>Otsikko</h2>
+<h2>Linnut</h2>
 
 <p>Tähän sisältöä, kuvia ja tekstiä</p>
 
 
 
 <div class="section">
-  <article>
-    <h3>London</h3>
-    <p>teksti</p>
-  </article>
-    <aside>
+      <aside>
           <img src="IMG_8898.jpg" alt="lokki" style="width: 100%;height: auto;">
   </aside>
+  <article>
+    <h3>Lokki</h3>
+    <p>Lokit ovat merilintuja, joita on yli neljäkymmentä eri lajia. Niiden väritys vaihtelee pääasiassa eri harmaansävyjen ja valkoisen välillä. Lokkien nokka on vahva ja hieman koukkumainen. </p>
+      <a href="https://www.britannica.com/animal/gull" target="_blank">Lähde</a>
+  </article>
 </div>
 <div class="section">
     <article>
@@ -90,14 +91,14 @@
 </div>
 
 <div class="section">
+     <aside>
+      <img src="IMG_8908.jpg" alt="haahka" style="width: 100%;height: auto;">
+  </aside>
   <article>
     <h3>Haahka</h3>
     <p>Haahkat ovat haahkojen sukuun kuuluvia sorsalintuja. Uroksilla alaruumis ja päälaki ovat mustat, ja niillä on laaja valkea kaulus. Haahkat elävät Pohjois-Euroopan, Pohjois-Amerikan ja itäisen Siperian rannoilla.</p>
   <a href="https://animalia.bio/fi/common-eider" target="_blank">Lähde</a>
   </article>
-   <aside>
-      <img src="IMG_8908.jpg" alt="haahka" style="width: 100%;height: auto;">
-  </aside>
 </div>
 
 <div class="section">
