--- a/Eläinsafari/index.html
+++ b/Eläinsafari/index.html
@@ -79,7 +79,29 @@
 
 <script>
 let slideIndex = 1;
-showSlides(slideIndex);
+let slideTimer; // Store timer so we can reset it on manual navigation
+
+function showSlides(n) {
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  
+  if (n > slides.length) { slideIndex = 1 }    
+  if (n < 1) { slideIndex = slides.length }  
+  
+  for (let i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (let i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+
+  // Restart automatic slide transition after manual action
+  clearTimeout(slideTimer);
+  slideTimer = setTimeout(() => plusSlides(1), 3000);
+}
 
 function plusSlides(n) {
   showSlides(slideIndex += n);
@@ -89,23 +111,9 @@ function currentSlide(n) {
   showSlides(slideIndex = n);
 }
 
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-}
+// Start automatic slideshow
+showSlides(slideIndex);
 </script>
-
 
 
 
