--- a/Eläinsafari/fifth.html
+++ b/Eläinsafari/fifth.html
@@ -25,11 +25,6 @@
 </div>
 <h2>Sorkkaeläimet</h2>
 
-<p>Tähän sisältöä, kuvia ja tekstiä</p>
-
-
-
-
 <div class="section">
   <aside>
          <img src="IMG_4774.jpg" alt="nauta" style="width: 100%;height: auto;">
@@ -129,6 +124,16 @@
      </article>
 </div>
 
+<div class="section">
+    <article>
+    <h3>Virtahepo</h3>
+    <p>Virtahevot ovat virtahepojen heimoon kuuluvia sorkkaeläimiä. Virtahepojen väritys vaihtelee ruskeanharmaasta sinertävän mustaan. Niiden vatsa sekä silmien ja korvien ympäristö ovat rusehtavan vaaleanpunertavia. Virtahevot elävät Saharan eteläpuolisessa Afrikassa matalissa järvissä, joissa ja soilla.</p>
+      <a href="https://animalia.bio/fi/common-hippo" target="_blank">Lähde</a>
+  </article>
+  <aside>
+     <img src="IMG_5663.jpg" alt="virtahepo" style="width: 100%;height: auto;">
+  </aside>
+</div>
 
 <footer>
     &nbsp;&nbsp;&nbsp;
