--- a/Eläinsafari/sixth.html
+++ b/Eläinsafari/sixth.html
@@ -25,18 +25,14 @@
 </div>
 <h2>Muut eläimet</h2>
 
-<p>Tähän sisältöä, kuvia ja tekstiä</p>
-
-
-
-
 <div class="section">
   <aside>
          <img src="IMG_4738.jpg" alt="koira" style="width: 100%;height: auto;">
   </aside>
   <article>
-    <h3>London</h3>
-    <p>teksti</p>
+    <h3>Koira</h3>
+    <p>Koirat ovat harmaasusista polveutuvia kotieläimiä, joita on nykyään yli neljäsataa eri rotua. Koirat kesytettiin alun perin hyötykäyttöön kuten metsästykseen tai vahdeiksi, mutta nykyään suurin osa koirista on lemmikkejä. Koirilla on rodun mukaan tyypillisesti joko lyhyt, keskipitkä tai pitkä turkki.</p>
+     <a href="https://www.britannica.com/animal/dog/Role-in-human-societies" target="_blank">Lähde</a>
   </article>
 </div>
 
@@ -57,7 +53,7 @@
   </aside>
   <article>
     <h3>Karhu</h3>
-    <p>teksti</p>
+    <p>Karhut eli ruskeakarhut kuuluvat karhujen heimoon. Niiden turkin väri vaihtelee lähes mustasta vaalean kellanharmaaseen. Karhut elävät laajoilla alueilla Euraasiassa ja Pohjois-Amerikassa.</p>
      <a href="https://animalia.bio/fi/brown-bear" target="_blank">Lähde</a>
   </article>
 </div>
@@ -65,7 +61,7 @@
 <div class="section">
   <article>
     <h3>Isopanda</h3>
-    <p>teksti</p>
+    <p>Isopandoja kutsutaan bambukarhuiksi, pandoiksi, pandakarhuiksi ja jättiläispandoiksi. Ne kuuluvat karhujen heimoon. Isopandojen turkki on mustavalkoinen: niiden korvat, silmien ympärykset, kuono, raajat sekä hartiat ovat mustat, muualta niiden turkki on valkoinen. Isopandat elävät Kiinan keskiosien syrjäisissä vuoristoissa.</p>
      <a href="https://animalia.bio/fi/giant-panda" target="_blank">Lähde</a>
   </article>
     <aside>
@@ -79,7 +75,7 @@
   </aside>
   <article>
     <h3>Aasi</h3>
-    <p>teksti</p>
+    <p>Aasit eli kesyaasit ovat kavioeläinten lahkoon kuuluvia hevoseläimiä. Ne ovat kesyjä ja niitä pidetään koti- ja lemmikkieläiminä. Aasit muistuttavat ulkoisesti hevosia, lukuun ottamatta niiden pitkiä korvia.</p>
     <a href="https://animalia.bio/fi/donkey" target="_blank">Lähde</a>
   </article>
 </div>
@@ -87,8 +83,8 @@
 <div class="section">
   <article>
     <h3>Aroseepra</h3>
-    <p>teksti</p>
-    <a href="https://animalia.bio/fi/plains-zebra" target="_blank">Lähde</a>
+    <p>Aroseeprat eli savanninseeprat ovat kavioeläinten lahkoon kuuluvia hevoseläimiä. Niillä on mustavalkoinen raidoitus, joka on niiden etuosassa pystysuoraa ja takaosassa vaakasuoraa. Jokaisen aroseepran raidoitus on yksilöllinen. Aroseeprat elävät savanneilla, ruohotasangoilla, pensasmailla sekä avoimilla metsämailla.</p>
+    <a href="https://animalia.bio/plains-zebra" target="_blank">Lähde</a>
   </article>
     <aside>
         <img src="IMG_5007.jpg" alt="aroseepra" style="width: 100%;height: auto;">
@@ -101,7 +97,7 @@
   </aside>
   <article>
     <h3>Savanninorsu</h3>
-    <p>teksti</p>
+    <p>Savanninnorsut eli pensasnorsut ovat afrikannorsujen sukuun kuuluvia norsueläimiä. Savanninnorsujen syöksyhampaat voivat kasvaa yli kolmen metrin pituisiksi ja niiden korvat ovat jopa puolitoista metriä korkeat ja lähes yhtä leveät. Savanninorsut elävät vuoristometsissä, tiheiköissä, savanneilla, heinämailla sekä aavikoilla.</p>
      <a href="https://animalia.bio/fi/african-bush-elephant" target="_blank">Lähde</a>
   </article>
 </div>
@@ -109,7 +105,7 @@
 <div class="section">
   <article>
     <h3>Yellow-spotted rock hyrax</h3>
-    <p>teksti</p>
+    <p>Yellow-spotted rock hyraxit ovat tamaanien lahkoon kuuluvia nisäkkäitä. Niiden väritys vaihtelee elinympäristön mukaan harmaasta punertavan ruskeaan. Yellow-spotted rock hyraxit elävät Afrikan itäosissa Punaisenmeren rannikolta lähes eteläisimpään Afrikkaan asti.</p>
     <a href="https://animalia.bio/yellow-spotted-rock-hyrax" target="_blank">Lähde</a>
   </article>
     <aside>
@@ -123,7 +119,7 @@
   </aside>
   <article>
     <h3>Piikkisika</h3>
-    <p>teksti</p>
+    <p>Piikkisiat ovat piikkisikojen heimoon kuuluvia jyrsijöitä. Ne ovat väriltään valkoruskeita. Piikkisioilla kasvaa pitkiä piikkejä niiden päässä, niskassa ja selässä. Piikkisiat elävät Pohjois- ja Keski-Afrikassa sekä Italiassa.</p>
      <a href="https://animalia.bio/fi/crested-porcupine" target="_blank">Lähde</a>
   </article>
 </div>
@@ -145,7 +141,7 @@
   </aside>
   <article>
     <h3>Marokonmaaorava</h3>
-    <p>teksti</p>
+    <p>Marokonmaaoravat ovat oravien heimoon kuuluvia jyrsijöitä. Ne ovat väritykseltään harmahtavan tai punertavan ruskeita ja niiden kyljissä on valkoiset raidat. Marokonmaaoravat elävät Pohjois-Afrikassa Marokon, Länsi-Saharan ja Algerian alueilla kuivissa kivikoissa, pensasaroilla ja leudoilla ruohotasangoilla.</p>
      <a href="https://animalia.bio/barbary-ground-squirrel" target="_blank">Lähde</a>
   </article>
 </div>
@@ -153,24 +149,15 @@
 <div class="section">
   <article>
     <h3>Harmaaisokenguru</h3>
-    <p>teksti</p>
-     <a href="https://aalborgzoo.dk/en/our-animals-2/eastern-grey-caempekaenguru/" target="_blank">Lähde</a>
+    <p>Harmaaisokengurut ovat pussieläimien osaluokkaan kuuluvia nisäkkäitä. Niiden turkki on vaalean harmaa. Harmaaisokengurut elävät kuivahkoissa pensaikoissa, metsämailla sekä viljelysmailla Australian itäosissa.</p>
+     <a href="https://australian.museum/learn/animals/mammals/eastern-grey-kangaroo/" target="_blank">Lähde</a>
   </article>
     <aside>
         <img src="IMG_9661.png" alt="harmaaisokenguru" style="width: 100%;height: auto;">
   </aside>
 </div>
 
-<div class="section">
-  <aside>
-     <img src="IMG_5663.jpg" alt="virtahepo" style="width: 100%;height: auto;">
-  </aside>
-  <article>
-    <h3>Virtahepo</h3>
-    <p>teksti</p>
-      <a href="https://animalia.bio/fi/common-hippo" target="_blank">Lähde</a>
-  </article>
-</div>
+
 
 <footer>
     &nbsp;&nbsp;&nbsp;
